# MIT-OCW-Computer-Graphics

./: .gitmodules  CMakeLists.txt  README.md
a0/: README.md  VertexShader.vertexshader  a0.cpp
a1/: FragmentShader.fragmentshader  README.md  a1.cpp  camera.cpp  camera.h  curve.cpp  curve.h  extra.h  parse.cpp  parse.h  surf.h  tuple.h
common/: objloader.cpp  objloader.hpp  vboindexer.cpp  vboindexer.hpp
